--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
       <div class="parallax-bg" style="
-            background-image: url(img/m.jpg);
+            background-image: url(img/m.jpg)
           " data-swiper-parallax="-23%"></div>
       <div class="swiper-wrapper">
         <div class="swiper-slide">
